--- a/pacman ver 2/test.ipynb
+++ b/pacman ver 2/test.ipynb
@@ -29,7 +29,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from modules.util_classes import Coor"
+    "from modules.util_classes import Coor\n",
+    "from modules.util_functions import hashFunction"
    ]
   },
   {
@@ -59,51 +60,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coor = Coor(0, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0"
+       "30"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 15
     }
    ],
    "source": [
-    "arr[coor.get()]"
+    "b = arr[0:2, 0:2]\n",
+    "sum(arr[arr % 2 == 0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<modules.util_classes.Coor at 0x7f7f0c157fd0>"
+       "array([[0, 1],\n",
+       "       [3, 4]])"
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 11
     }
    ],
    "source": [
-    "coor"
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'dcd8a25b4216059cededec353d4093075c5d75d3'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "hashFunction(a)"
    ]
   },
   {
@@ -115,7 +129,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([3, 5, 9, 8, 7, 6, 1, 4, 2, 0])"
+       "array([9, 7, 8, 5, 0, 4, 6, 2, 3, 1])"
       ]
      },
      "metadata": {},
