--- a/pacman ver 2/test.ipynb
+++ b/pacman ver 2/test.ipynb
@@ -60,23 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "30"
+       "6"
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 7
     }
    ],
    "source": [
-    "b = arr[0:2, 0:2]\n",
-    "sum(arr[arr % 2 == 0])"
+    "np.sum(arr % 2 == 0)"
    ]
   },
   {
