--- a/pacman ver 2/test.ipynb
+++ b/pacman ver 2/test.ipynb
@@ -230,6 +230,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "\n",
+    "i += True\n",
+    "\n",
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
